welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: reassignment to val
		(c = c + 1);
                   ^ColumnByColumn:21: error: reassignment to val
		(l = l + 1);
                   ^ColumnByColumn:31: error: too many arguments for method posfinale: ()Boolean
	while (!(posfinale(c,l))) {
                          ^ColumnByColumn:32: error: not enough arguments for method possuivante: (c: Int, l: Int)Unit.
Unspecified value parameters c, l.
		possuivante();
                           ^